--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "~/*": [
